# Expert-System-Shell

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
res/: CMakeLists.txt  resources.qrc
res/runtime/: TestExpertSystem.json
src/: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/databases/facts/: Fact.hpp  FactDatabase.cpp  FactDatabase.hpp  FactTypes.cpp  FactTypes.hpp  Range.hpp  Value.hpp
src/engines/explanation/: Log.cpp  Log.hpp
src/engines/inference/: Forward.cpp  Forward.hpp
src/gui/: mainwindow.ui
src/gui/editor/facts/: FactEditor.cpp  FactEditor.h  FactEditor.ui  NewEnum.cpp  NewEnum.h  NewEnum.ui  NewFact.cpp  NewFact.h  NewFact.ui
src/gui/editor/rules/: NewAssignment.cpp  NewAssignment.h  NewAssignment.ui  NewCondition.cpp  NewCondition.h  NewCondition.ui  NewRule.cpp  NewRule.h  NewRule.ui  RuleEditor.cpp  RuleEditor.h  RuleEditor.ui
src/gui/menu/: AdditionalRequest.cpp  AdditionalRequest.h  AdditionalRequest.ui  ConsultationBegin.cpp  ConsultationBegin.h  ConsultationBegin.ui  ConsultationResult.cpp  ConsultationResult.h  ConsultationResult.ui  MainMenu.cpp  MainMenu.h  MainMenu.ui
src/knowledge/facts/: Database.cpp  Database.hpp  Fact.hpp  FactDatabase.cpp  FactDatabase.hpp  FactTypes.hpp  Facts.cpp  Facts.hpp  Value.hpp  Values.cpp  Values.hpp
src/knowledge/rules/: Antecedent.cpp  Antecedent.hpp  Assignment.hpp  Assignments.cpp  Assignments.hpp  Condition.hpp  Conditions.cpp  Conditions.hpp  Consequent.cpp  Consequent.hpp  Rule.cpp  Rule.hpp  RuleDatabase.cpp  RuleDatabase.hpp
src/utility/: Confidence.cpp  Confidence.hpp  DynamicEnum.cpp  DynamicEnum.hpp  Range.hpp  Singleton.hpp  SymbolsJSON.hpp  Types.hpp
